WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123445
[Curl] Cookies are sometimes not set in download request.
https://bugs.webkit.org/show_bug.cgi?id=123445
Summary
[Curl] Cookies are sometimes not set in download request.
peavo
Reported
2013-10-29 07:51:47 PDT
Sometimes downloads are failing for me. I have traced this down to be caused by missing cookies in the download request. I believe the reason for this is that when the download tries to read from the cookie file, it fails to open it, because it is already opened for writing by the ResourceHandleManager. This can be fixed by using the share handle in the ResourceHandleManager to get the cookies, instead for reading the cookie file. This will also be a performance improvement, as there is no need to read and parse the cookie file all over again for each download. The multithreading issues are already handled by the ResourceHandleManager.
Attachments
Patch
(2.01 KB, patch)
2013-10-29 07:58 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-10-29 07:58:21 PDT
Created
attachment 215388
[details]
Patch
Brent Fulgham
Comment 2
2013-10-30 10:04:43 PDT
Comment on
attachment 215388
[details]
Patch r=me
peavo
Comment 3
2013-10-30 10:26:40 PDT
(In reply to
comment #2
)
> (From update of
attachment 215388
[details]
) > r=me
Thanks for reviewing!
WebKit Commit Bot
Comment 4
2013-10-30 10:29:54 PDT
Comment on
attachment 215388
[details]
Patch Clearing flags on attachment: 215388 Committed
r158277
: <
http://trac.webkit.org/changeset/158277
>
WebKit Commit Bot
Comment 5
2013-10-30 10:29:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug